# kernel

./: .clang-format  .editorconfig  .gitignore  README.md  meson.build  meson_options.txt
.githooks/: pre-commit
.github/workflows/: ci.yml
base/: meson.build
base/libk/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
boot/: limine.conf  limine.conf.in
core/: condvar.c  cpu.c  irq.c  kthread.c  meson.build  mutex.c  sched.c  spinlock.c  thread.c
core/libk/stdio/: printf.c  putchar.c  puts.c  sprintf.c  utils.c  utils.h
core/libk/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
core/memory/: early_alloc.c  kheap.c  kheap_vmm.c  pmm.c  vaddr_alloc.c  vmm.c
core/mm/: boot_info.c
hal/: early_alloc.h  mm.h  mmu.h  serial.h
include/core/: condvar.h  cpu.h  early_alloc.h  kheap.h  kthread.h  lock.h  math.h  mm.h  mutex.h  pmm.h  sched.h  spinlock.h  thread.h  vaddr_alloc.h  vmm.h
include/hal/: clock.h  cpu.h  hcf.h  interrupts.h  paging.h  serial.h
include/kernel/: boot.h  cpu_boot.h  requests.h  selftest.h
include/libk/: limits.h  stdbool.h  stddef.h  stdint.h  stdio.h  string.h
kernel/: linker.ld  meson.build
kernel/include/: limine.h  stdio.h  string.h
kernel/libk/format/: format.c  format.h  sprintf.c
kernel/libk/stdio/: printf.c  putchar.c  puts.c  sprintf.c  utils.c  utils.h
kernel/libk/string/: memcmp.c  memcpy.c  memmove.c  memset.c  strlen.c
kernel/src/: cpu_boot.c  init.c  kheap.c  requests.c  requests.h
kernel/src/boot/: boot.c  limine_requests.h  requests.c
kernel/src/memory/: kheap_vmm.c  vmm.c
kernel/test/: selftest.c
kernel/test/selftests/: cpu.c  kheap.c  pmm.c  sched_mutex.c  vmm.c
scripts/: build.sh  format.sh  install-hooks.sh  make_limine_image.sh  run.sh  run_qemu.sh
test/: meson.build  thread_test.h
test/base/: string_test.c
test/core/: condvar_test.c  cpu_irq_test.c  cpu_spinlock_test.c  kthread_test.c  mutex_test.c  sched_test.c  thread_test.c
test/early_alloc/: allocation_until_exhaustion.c  basic_allocations.c  early_alloc_test.c  early_alloc_test.h
test/kheap/: basic.c  calloc_realloc.c  concurrency.c  growth.c  kheap_test.c  kheap_test.h
test/mocks/hal/: clock.c  cpu.c  cpu_mock.h  interrupts.c
test/pmm/: basic.c  concurrency.c  contiguous.c  pmm_test.c  pmm_test.h
test/vaddr_alloc/: alignment.c  basic.c  concurrency.c  vaddr_alloc_test.c  vaddr_alloc_test.h
test/vmm/: basic.c  mock_paging.c  rollback.c  test_support.c  test_support.h  vmm_test.c  vmm_test.h
toolchain/: aarch64-elf.ini  loongarch64-elf.ini  riscv64-elf.ini  x86_64-elf.ini
toolchain/meson/: meson.build
